src/test/ui/parser/keyword-unsafe-as-identifier.stderr
error: expected identifier, found keyword `unsafe`
  --> $DIR/keyword-unsafe-as-identifier.rs:4:9
   |
LL |     let unsafe = "foo";
   |         ^^^^^^ expected identifier, found keyword
   |
help: escape `unsafe` to use it as an identifier
   |
LL |     let r#unsafe = "foo";
   |         ++

error: aborting due to previous error

